--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:url"                content="https://daehee-seoyeong.github.io" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="대희♥서영 결혼합니다" />
+    <meta property="og:description"        content="2020. 2. 1. 토요일 오후 1시" />
+    <meta property="og:image"              content="/resouces/image/main.jpg" />
     <title>결혼합니다</title>
     <link href="/resouces/css/jquery.slider.css" rel="stylesheet">
     <link href="/resouces/css/default.css" rel="stylesheet">
