open graph image 수정

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property="og:url"                content="https://daehee-seoyeong.github.io" />
     <meta property="og:type"               content="website" />
-    <meta property="og:title"              content="대희♥서영 결혼합니다" />
-    <meta property="og:description"        content="2020. 2. 1. 토요일 오후 1시" />
-    <meta property="og:image"              content="/resouces/image/main.jpg" />
-    <title>결혼합니다</title>
+    <meta property="og:title"              content="대희 ♥ 서영" />
+    <meta property="og:description"        content="저희 결혼합니다" />
+    <meta property="og:image"              content="https://github.com/daehee-seoyeong/daehee-seoyeong.github.io/blob/master/resouces/image/main.jpg?raw=true" />
     <link href="/resouces/css/jquery.slider.css" rel="stylesheet">
     <link href="/resouces/css/default.css" rel="stylesheet">
     <script src="/resouces/js/jquery-2.2.3.min.js"></script>
