--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property="og:url"                content="https://daehee-seoyeong.github.io" />
     <meta property="og:type"               content="website" />
@@ -20,22 +20,38 @@
             <li>
                 <div class="first-content">
                     <div class="first-content-detail">
-                        <p class="title">정대희 <span style="font-size: 18px; font-weight: normal;">그리고</span> 김서영</p>
+                        <p class="title">정대희&nbsp;<span style="font-size: 16px;">♥</span>&nbsp;김서영</p>
+                        <hr />
+                        <p class="subtitle">결혼합니다</p>
                         <p class="date">2020. 2. 1. 토요일 오후 1시</p>
-                        <p class="location">비렌티 웨딩</p>
+                        <p class="location">천안 비렌티 베르테홀(3F)</p>
                     </div>
+                    <p id="stamp" class="stamp">D+35</p>
                 </div>
             </li>
             <li>
                 <div class="second-content">
                     <div class="second-content-detail">
+                        <p class="poem">
+                            봄의 그대는 벚꽃이었고
+                            <br />여름의 그대는 바람이었으며
+                            <br />가을의 그대는 하늘이었고
+                            <br />겨울의 그대는 하얀 눈이었다.
+                        </p>
+                        <p class="poem">
+                            그대는 언제나
+                            <br />행복 그 자체였다.
+                        </p>
+                        <p class="poem">
+                            &lt;강현욱, 사계&gt;
+                        </p>
                         <p class="letter">7년간의 추억을 가지고
-                            <br />더 큰 행복의 길로 나가려 합니다.
+                            <br />더 큰 행복의 길로 나아가려 합니다.
                         </p>
                         <p class="letter">그 시작의 자리에 오셔서 축복해주시면
                             <br/> 더없는 기쁨으로 간직하겠습니다.
                         </p>
-                        <div style="margin-top: 70px;">
+                        <div style="margin-top: 40px;">
                             <hr />
                                 <p class="parent-name">정상욱 김수경 <span class="child-name">의 장남</span> 대희<br />김형수 정경하 <span class="child-name">의 장녀</span> 서영
                                 </p>
@@ -104,6 +120,21 @@
             afterCardChange: null
     
         })
+
+        var dday = new Date("Feburay 1, 2020 00:00:00").getTime();//디데이
+        var nowday = new Date();//현재
+        nowday = nowday.getTime();//밀리세컨드 단위변환
+        var distance = dday - nowday;//디데이에서 현재까지 뺀다.
+        var d = Math.floor(distance / (1000 * 60 * 60 * 24));//일
+
+        if (d > 0){
+            $("#stamp").text("D-"+d);
+        }
+        else if (d == 0) {
+            $("#stamp").text("D day");
+        } else {
+            $("#stamp").text("D+"+d);
+        }
     </script>
 </body>
 </html>
