--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta property="og:title"              content="대희 ♥ 서영" />
     <meta property="og:description"        content="저희 결혼합니다" />
     <meta property="og:image"              content="https://github.com/daehee-seoyeong/daehee-seoyeong.github.io/blob/master/resouces/image/main.jpg?raw=true" />
-    <link href="/resouces/css/jquery.slider.css" rel="stylesheet">
-    <link href="/resouces/css/default.css" rel="stylesheet">
+    <link href="/resouces/css/jquery.slider.css?v=191223" rel="stylesheet">
+    <link href="/resouces/css/default.css?v=191223" rel="stylesheet">
     <script src="/resouces/js/jquery-2.2.3.min.js"></script>
     <script src="/resouces/js/jquery.slider.min.js"></script>
 </head>
