썸네일 스크롤 레이아웃 수정

--- a/index.html
+++ b/index.html
@@ -75,20 +75,22 @@
 
                         </div>
                         <div class="controller-area">
+                            <div style="display: table-cell; vertical-align: middle;">
                             <!-- <button style="display: table-cell; vertical-align: middle;">이전</button>
                             <span class="indicator">1/5</span>
                             <button style="display: table-cell; vertical-align: middle;">다음</button>
                          -->
-                            <div class="image-thumb"></div>
-                            <div class="image-thumb"></div>
-                            <div class="image-thumb"></div>
-                            <div class="image-thumb"></div>
-                            <div class="image-thumb"></div>
-                            <div class="image-thumb"></div>
-                            <div class="image-thumb"></div>
-                            <div class="image-thumb"></div>
-                            <div class="image-thumb"></div>
-                            <div class="image-thumb"></div>
+                                <div class="image-thumb"></div>
+                                <div class="image-thumb"></div>
+                                <div class="image-thumb"></div>
+                                <div class="image-thumb"></div>
+                                <div class="image-thumb"></div>
+                                <div class="image-thumb"></div>
+                                <div class="image-thumb"></div>
+                                <div class="image-thumb"></div>
+                                <div class="image-thumb"></div>
+                                <div class="image-thumb"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
