--- a/index.html
+++ b/index.html
@@ -328,17 +328,10 @@
             initializeCardSlider();
             initializeDateStamp();
             preventDoubleTap();
-            // $("#div-loading").remove();
-
-            $(".first-content").css("background", "url('/resources/image/main.jpg') no-repeat")
-                .promise()
-                .done(function() {
-                    $(".first-content").css("background-size", "auto 100%");
-                    $(".first-content").css("background-position", "center top");
-                    $("#div-loading").remove();
-                })
-            ;
-            
+            setTimeout(function() {
+                $("#div-loading").fadeOut("slow");
+                $(".arrow").css("display", "block");
+            }, 2000);
         });
     </script>
 </body>
