--- a/index.html
+++ b/index.html
@@ -129,37 +129,37 @@
                         <div class="photo photo-area-1">
 
                         </div>
-                        <div class="photo-area-2">
+                        <div class="photo photo-area-2">
 
                         </div>
-                        <div class="photo-area-3">
+                        <div class="photo photo-area-3">
 
                         </div>
-                        <div class="photo-area-4">
+                        <div class="photo photo-area-4">
 
                         </div>
-                        <div class="photo-area-5">
+                        <div class="photo photo-area-5">
 
                         </div>
-                        <div class="photo-area-6">
+                        <div class="photo photo-area-6">
 
                         </div>
-                        <div class="photo-area-7">
+                        <div class="photo photo-area-7">
 
                         </div>
-                        <div class="photo-area-8">
+                        <div class="photo photo-area-8">
 
                         </div>
-                        <div class="photo-area-9">
+                        <div class="photo photo-area-9">
 
                         </div>
-                        <div class="photo-area-10">
+                        <div class="photo photo-area-10">
 
                         </div>
-                        <div class="photo-area-11">
+                        <div class="photo photo-area-11">
 
                         </div>
-                        <div class="photo-area-12">
+                        <div class="photo photo-area-12">
 
                         </div>
                         <div class="controller-area">
@@ -348,6 +348,9 @@
         }
 
         $(document).ready(function() {
+            $(".photo").each(function(index, value) {
+                if (index != 0) $(this).css("display", "none");
+            });
             initializeCardSlider();
             initializeDateStamp();
             preventDoubleTap();
