폰트 에러 수정

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script src="/resources/js/jquery.slider.min.js"></script>
 </head>
 <body>
-    <div id="div-loading" style="z-index: 9999; display: table; width: 100% !important; height: 100% !important;">
-        <p style="display: table-cell; vertical-align: middle; text-align: center; font-size: 18px;">잠시만 기다려주세요.</p>
+    <div id="div-loading">
+        <p>잠시만 기다려주세요</p>
     </div>
     <div class="arrow arrow-first"></div>
     <div class="arrow arrow-second"></div>
