이미지 로드 관련 수정

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
             initializeDateStamp();
             preventDoubleTap();
         });
-        $(document).waitForImages(function() {
+        $("body").waitForImages(true).done(function() {
             $("#div-loading").fadeOut("slow");
-            $(".arrow").css("display", "block");
+                $(".arrow").css("display", "block");
         });
     </script>
 </body>
