이미지 로드 관련 수정

--- a/index.html
+++ b/index.html
@@ -195,7 +195,9 @@
             preventDoubleTap();
         });
         $("body").waitForImages(true).done(function() {
-            $("#div-loading").animate({opacity: 0}, 1000).hide();
+            $("#div-loading").animate({opacity: 0}, 1000, function() {
+                $(this).hide();
+            });
             $(".arrow").css("display", "block");
         });
     </script>
