이미지 로드 관련 수정

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <script src="/resources/js/jquery.waitforimages.min.js"></script>
 </head>
 <body>
-    <div id="div-loading"><p>잠시만 기다려주세요</p></div>
+    <div id="div-loading">
+        <div class="dot-flashing"></div>
+        <p>잠시만 기다려주세요</p>
+    </div>
     <div class="arrow arrow-first"></div>
     <div class="arrow arrow-second"></div>
     <div class="my-slider">
