이미지 로드 관련 수정

--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
             initializeCardSlider();
             initializeDateStamp();
             preventDoubleTap();
+            $(".arrow").fadeIn();
         });
         $("body").waitForImages(true).done(function() {
             $("#div-loading").animate({opacity: 0}, 1000, function() {
                 $(this).hide();
-                $(".arrow").css("display", "block");
             });
         });
     </script>
