이미지 로드 관련 수정

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div id="div-loading">
-        <div class="dot-flashing"></div>
+        <!-- <div class="dot-flashing"></div> -->
         <p>잠시만 기다려주세요</p>
     </div>
     <div class="arrow arrow-first"></div>
