--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             initializeCardSlider();
             initializeDateStamp();
             preventDoubleTap();
-            $(".arrow").css("display", "table");
+            $(".arrow").css("display", "block");
         });
         $("body").waitForImages(true).done(function() {
             $("#div-loading").animate({opacity: 0}, 1000, function() {
