레이아웃 수정

--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
         <ul>
             <li>
                 <div class="first-content">
+                    <div class="first-content-image"></div>
                     <div class="first-content-detail">
-                        <p class="title">정대희
-                            <img src="/resources/image/heart-4.png" style="width: 15px; margin-left: 3px; margin-right: 3px;"/>
-                            김서영</p>
-                        <hr />
-                        <p class="subtitle">결혼합니다</p>
-                        <p class="date">2020. 2. 1. 토요일 오후 1시</p>
-                        <p class="location">천안 비렌티 베르테홀(3F)</p>
+                        <div class="first-content-text">
+                            <p class="title">Daehee & Seoyeong</p>
+                            <p class="date">2020. 2. 1. Sat 1:00pm</p>
+                        </div>
                     </div>
                     <p id="stamp" class="stamp">D+35</p>
                 </div>
@@ -66,7 +64,7 @@
                             Calendar
                         </p>
                         <p class="date">
-                            2월 1일 토요일 오후 1시
+                            2월 1일 토요일<br>오후 1시
                         </p>
                         <hr>
                         <table>
@@ -129,18 +127,20 @@
             <li>
                 <div class="third-content">
                     <div class="third-content-detail">
-                        <div class="photo photo-area-1"></div>
-                        <div class="photo photo-area-2"></div>
-                        <div class="photo photo-area-3"></div>
-                        <div class="photo photo-area-4"></div>
-                        <div class="photo photo-area-5"></div>
-                        <div class="photo photo-area-6"></div>
-                        <div class="photo photo-area-7"></div>
-                        <div class="photo photo-area-8"></div>
-                        <div class="photo photo-area-9"></div>
-                        <div class="photo photo-area-10"></div>
-                        <div class="photo photo-area-11"></div>
-                        <div class="photo photo-area-12"></div>
+                        <div class="photo-div">
+                            <img class="photo photo-area-1" src="/resources/image/photo-01.jpg"/>
+                            <img class="photo photo-area-2" src="/resources/image/photo-02.jpg"/>
+                            <img class="photo photo-area-3" src="/resources/image/photo-03.jpg"/>
+                            <img class="photo photo-area-4" src="/resources/image/photo-04.jpg"/>
+                            <img class="photo photo-area-5" src="/resources/image/photo-05.jpg"/>
+                            <img class="photo photo-area-6" src="/resources/image/photo-06.jpg"/>
+                            <img class="photo photo-area-7" src="/resources/image/photo-07.jpg"/>
+                            <img class="photo photo-area-8" src="/resources/image/photo-08.jpg"/>
+                            <img class="photo photo-area-9" src="/resources/image/photo-09.jpg"/>
+                            <img class="photo photo-area-10" src="/resources/image/photo-10.jpg"/>
+                            <img class="photo photo-area-11" src="/resources/image/photo-11.jpg"/>
+                            <img class="photo photo-area-12" src="/resources/image/photo-12.jpg"/>
+                        </div>
                         <div class="controller-area">
                             <button onclick="prevImage();" class="btn-prev-img">이전</button>
                             <span class="indicator">1/12</span>
