메세지 table 에러 수정

--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
                     <div class="sixth-content-reply">
                         <div class="reply-list">
                             <table>
+                                <tbody></tbody>
                             </table>
                         </div>
                         <div class="sixth-content-inputgroup">
